[Mac] Add Home button to Default Touch Bar

BUG=700057

Review-Url: https://codereview.chromium.org/2743633005
Cr-Commit-Position: refs/heads/master@{#456209}

Former-commit-id: 0f0ed150a7c3aa62413e8d9cbe4d27594cc74af7